--- a/dynamic-page.j2
+++ b/dynamic-page.j2
@@ -4,8 +4,8 @@
         <h1> The Server Operating System: {{ ansible_distribution }} </h1>
         <br>
         <h1> The Server Hostname : {{ ansible_hostname}} </h1>
-        <b>
-    
+        <br>
+        <h1> The Admin user : {{ myusername }} </h1>
     </center>
     </body>
 </html>
